--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="https://example.com#id">Ссылка с параметром id в URL</a></li>
                 <li><a href="page-in-current-directory.html">Относительная ссылка на страницу в текущем каталоге</a></li>
                 <li><a href="about/about.html">Относительная ссылка на страницу в каталоге уровнем выше текущего</a></li>
-                <li><a href="../two-levels-up/index.html">Относительная ссылка на страницу в каталоге двумя уровнями выше</a></li>
+                <li><a href="../../index.html">Относительная ссылка на страницу в каталоге двумя уровнями выше</a></li>
                 <li><a href="https://example.com#fragment">Ссылка на фрагмент страницы стороннего сайта</a></li>
                 <li><a href="image-map.html">Ссылка из прямоугольных и круглых областей картинок (HTML-элемент map)</a></li>
                 <li><a href="#">Ссылка с пустым href</a></li>
