--- a/index.html
+++ b/index.html
@@ -163,10 +163,12 @@
             </form>
         </section>
     </main>
+</body>
 
     <footer>
         <p>
             ©Коневцов Егор
         </p>
     </footer>
+</html>
         
